# SamplePythonProcessManager

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_CLI.md  child_resource.py  daemon.py  ppms_child.py  ppms_daemon.py  ppms_task.py  process_status_lock.py  pyproject.toml  requirements.txt  settings.py  setup.py  signal_handler.py  sppm_cli.py  table_driven.py  utils.py
conf/: log-sample.ini
examples/: .sppm_env  .sppm_env_block  .sppm_env_working_lock  example.py  example_block.py  example_working_lock.py
sppm/: __init__.py  child.py  cmd_action.py  log_level.py  master.py  ppms_child.py  ppms_daemon.py  process_status.py  process_status_lock.py  settings.py  signal_handler.py  sppm_config.py  utils.py  version.py
sppm_help/: __init__.py
